Don't replace pypi.python.org with pypi.nordu.net but add it as an additional url

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [easy_install]
-index_url = https://pypi.nordu.net/simple/
+find_links = https://pypi.nordu.net/simple/
 
 [nosetests]
 match = ^test
