Run with --with-xcoverage so we get reports in Jenkins

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,9 @@
 match = ^test
 where = eduid_am
 nocapture = 1
+cover-package = eduid_am
+with-xcoverage = 1
+cover-erase = 1
 
 [aliases]
 testing = develop easy_install eduid_am[testing]
