Better configuration example to avoid start the celery worker badly.

--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -1,3 +1,3 @@
 [main]
-broker_url = amqp://
-mongo_uri = mongodb://localhost:27017/eduid
+broker_url = amqp://eduid:eduid@127.0.0.1:5672/eduid_vhost
+mongo_uri = mongodb://localhost:27017/eduid_am
