Added new config keys

--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -2,3 +2,9 @@
 broker_url = amqp://
 sms_acc = bla
 sms_key = bla
+mm_cert_file =
+mm_key_file =
+mm_sender_org_nr =
+mm_sender_org_name =
+mm_support_text =
+
