Added log only mode for send_message() task

--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -9,3 +9,7 @@ mm_sender_org_name =
 mm_support_text =
 mm_default_subject =
 template_dir =
+
+# If set to true messages sent are only logged and not actually
+# transmitted to the end service for SMS or MM
+devel_mode = true
