Added toggle functionality for the TransactionAudit decorator
To make it easier for projects depending on eduid_msg to write
unit tests the TransactionAudit decorator is disabled by default.

--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -14,3 +14,4 @@ navet_order_id =
 # If set to true messages sent are only logged and not actually
 # transmitted to the end service for SMS or MM
 devel_mode = true
+audit = true
