--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -4,6 +4,8 @@ mongo_uri = mongodb://
 celery_result_backend = amqp
 sms_acc = bla
 sms_key = bla
+mm_api_user = user
+mm_api_pw = secret
 mm_cert_file =
 mm_key_file =
 mm_sender_org_nr =
