--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ var/
 .installed.cfg
 *.egg
 .idea
+*.pw
+*.ini
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
