--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -1,3 +1,6 @@
 [main]
 broker_url = amqp://eduid:eduid@127.0.0.1:5672/eduid_vhost
 mongo_uri = mongodb://localhost:27017/eduid_am
+
+CELERY_ACCEPT_CONTENT =
+    application/json
