--- a/eduid_lookup_mobile/test/data/test.ini
+++ b/eduid_lookup_mobile/test/data/test.ini
@@ -1,6 +1,7 @@
 [main]
 broker_url = amqp://
 devel_mode = true
+transaction_audit = false
 log_path =
 TELEADRESS_CLIENT_USER = TEST
 TELEADRESS_CLIENT_PASSWORD = TEST
