--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -1,16 +1,53 @@
 
-# Flask config
+#==============#
+# Flask config #
+#==============#
 
 # enable/disable debug mode
+#
 DEBUG = True
 
 # enable/disable testing mode
+#
 TESTING = False
 
 # the secret key
-SECRET_KEY = .\x88\x01\xbd\x06@\xac\x1b0\xa2{:I\xf5\xeb\xa3i\xd6\xbdht\xe9O\x10
+#
+SECRET_KEY = mysecretkey
+
+# the name of the session cookie
+#
+SESSION_COOKIE_NAME = sessid
+
+# the domain for the session cookie. If this is not set, the cookie will
+# be valid for all subdomains of SERVER_NAME.
+#
+SESSION_COOKIE_DOMAIN = docker
+
+# the path for the session cookie. If this is not set the cookie will be valid
+# for all of APPLICATION_ROOT or if that is not set for '/'.
+#
+SESSION_COOKIE_PATH = /
+
+# controls if the cookie should be set with the httponly flag. Defaults to True
+#
+SESSION_COOKIE_HTTPONLY = False
+
+# controls if the cookie should be set with the secure flag. Defaults to False
+#
+SESSION_COOKIE_SECURE = False
+
+# the lifetime of a permanent session as datetime.timedelta object.
+# Starting with Flask 0.8 this can also be an integer representing seconds.
+#
+PERMANENT_SESSION_LIFETIME = 3600
+
+# enable/disable x-sendfile
+#
+# USE_X_SENDFILE
 
 # the name of the logger
+#
 LOGGER_NAME = eduid_api.authn
 
 # the name and port number of the server. Required for subdomain support
@@ -18,7 +55,8 @@ LOGGER_NAME = eduid_api.authn
 # so setting this to “localhost” does not help. Setting a SERVER_NAME also
 # by default enables URL generation without a request context but with an
 # application context.
-SERVER_NAME = localhost
+#
+SERVER_NAME = authn.docker
 
 # explicitly enable or disable the propagation of exceptions.
 # If not set or explicitly set to None this is implicitly true if either
