--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -132,3 +132,14 @@ SERVER_NAME = authn.docker
 # X-Requested-With header)
 #
 # JSONIFY_PRETTYPRINT_REGULAR
+
+
+#==============#
+# redis config #
+#==============#
+
+redis_host = redis.docker
+redis_port = 6379
+redis_db = 0
+redis_sentinel_hosts =
+redis_sentinel_service_name =
