--- a/setup.cfg
+++ b/setup.cfg
@@ -3,9 +3,9 @@ index_url = https://pypi.nordu.net/simple/
 
 [nosetests]
 match = ^test
-where = eduiddashboard
+where = src
 nocapture = 1
-cover-package = eduiddashboard
+cover-package = eduid_api.authn
 with-xcoverage = 1
 cover-erase = 1
 
