--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -176,3 +176,13 @@ REDIS_PORT = 6379
 REDIS_DB = 0
 REDIS_SENTINEL_HOSTS =
 REDIS_SENTINEL_SERVICE_NAME =
+
+#=======#
+# SAML2 #
+#=======#
+
+SAML2.LOGIN_REDIRECT_URL = /
+SAML2.SETTINGS_MODULE = eduid_api.authn/src/eduid_api/authn/tests/saml2_settings.py
+SAML2.LOGOUT_REDIRECT_URL = http://html.docker/
+SAML2.USER_MAIN_ATTRIBUTE = eduPersonPrincipalName
+SAML2.STRIP_SAML_USER_SUFFIX =  @local.eduid.se
