rename package eduid_api -> eduid_webapp

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,9 @@ index_url = https://pypi.nordu.net/simple/
 match = ^test
 where = src
 nocapture = 1
-cover-package = eduid_api.authn
+cover-package = eduid_webapp.authn
 with-xcoverage = 1
 cover-erase = 1
 
 [aliases]
-testing = develop easy_install eduid_api.authn[testing]
+testing = develop easy_install eduid_webapp.authn[testing]
