--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -81,7 +81,7 @@ PERMANENT_SESSION_LIFETIME = 3600
 
 # the name of the logger
 #
-LOGGER_NAME = eduid_api.authn
+LOGGER_NAME = eduid_webapp.authn
 
 # the name and port number of the server. Required for subdomain support
 # (e.g.: 'myapp.dev:5000') Note that localhost does not support subdomains
@@ -182,7 +182,7 @@ REDIS_SENTINEL_SERVICE_NAME =
 #=======#
 
 SAML2.LOGIN_REDIRECT_URL = /
-SAML2.SETTINGS_MODULE = eduid_api.authn/src/eduid_api/authn/tests/saml2_settings.py
+SAML2.SETTINGS_MODULE = eduid_webapp.authn/src/eduid_webapp/authn/tests/saml2_settings.py
 SAML2.LOGOUT_REDIRECT_URL = http://html.docker/
 SAML2.USER_MAIN_ATTRIBUTE = eduPersonPrincipalName
 SAML2.STRIP_SAML_USER_SUFFIX =  @local.eduid.se
