--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -166,6 +166,11 @@ SERVER_NAME = authn.docker
 #
 # JSONIFY_PRETTYPRINT_REGULAR
 
+#================#
+# mongodb config #
+#================#
+
+MONGO_URI = mongodb://mongodb.docker:27017/
 
 #==============#
 # redis config #
