Cant use dot in Python constants

--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -186,8 +186,8 @@ REDIS_SENTINEL_SERVICE_NAME =
 # SAML2 #
 #=======#
 
-SAML2.LOGIN_REDIRECT_URL = /
-SAML2.SETTINGS_MODULE = eduid_webapp.authn/src/eduid_webapp/authn/tests/saml2_settings.py
-SAML2.LOGOUT_REDIRECT_URL = http://html.docker/
-SAML2.USER_MAIN_ATTRIBUTE = eduPersonPrincipalName
-SAML2.STRIP_SAML_USER_SUFFIX =  @local.eduid.se
+SAML2_LOGIN_REDIRECT_URL = /
+SAML2_SETTINGS_MODULE = eduid_webapp.authn/src/eduid_webapp/authn/tests/saml2_settings.py
+SAML2_LOGOUT_REDIRECT_URL = http://html.docker/
+SAML2_USER_MAIN_ATTRIBUTE = eduPersonPrincipalName
+SAML2_STRIP_SAML_USER_SUFFIX =  @local.eduid.se
