--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -187,7 +187,7 @@ REDIS_SENTINEL_SERVICE_NAME =
 #=======#
 
 SAML2_LOGIN_REDIRECT_URL = /
-SAML2_SETTINGS_MODULE = eduid_webapp.authn/src/eduid_webapp/authn/tests/saml2_settings.py
+SAML2_SETTINGS_MODULE = src/eduid_webapp/authn/tests/saml2_settings.py
 SAML2_LOGOUT_REDIRECT_URL = http://html.docker/
 SAML2_USER_MAIN_ATTRIBUTE = eduPersonPrincipalName
 SAML2_STRIP_SAML_USER_SUFFIX =  @local.eduid.se
