--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ index_url = https://pypi.nordu.net/simple/
 match = ^test
 where = src
 nocapture = 1
-cover-package = eduid_webapp.authn
+cover-package = eduid_webapp
 with-xcoverage = 1
 cover-erase = 1
 
