Use correct flavors for eduid-common

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,4 @@ with-xcoverage = 1
 cover-erase = 1
 
 [aliases]
-testing = develop easy_install eduid_webapp.authn[testing]
+testing = develop easy_install eduid_webapp[testing]
