--- a/config-templates/dev.yaml
+++ b/config-templates/dev.yaml
@@ -18,6 +18,29 @@ eduid:
             SAML2_USER_MAIN_ATTRIBUTE: eduPersonPrincipalName
             SAML2_STRIP_SAML_USER_SUFFIX: "@local.eduid.se"
             TOKEN_SERVICE_URL: http://authn.eduid.docker:8080/
+        authn:
+            SERVER_NAME: authn.eduid.docker:8080
+            SECRET_KEY: supersecretkey
+            MONGO_URI: mongodb://eduid_authn:eduid_authn_pw@mongodb.eduid_dev
+            TESTING: no
+            LOG_FILE: /opt/eduid/log/authn.log
+            LOG_LEVEL: DEBUG
+        letter_proofing:
+            SECRET_KEY: supersecretkey
+            LOG_FILE: /var/log/eduid/letter_proofing.log
+            LOG_LEVEL: DEBUG
+            MONGO_URI: mongodb://eduid_letter_proofing:eduid_letter_proofing_pw@mongodb.eduid_dev
+            CELERY_CONFIG:
+                BROKER_URL: amqp://eduid:eduid_pw@rabbitmq/msg
+                CELERY_RESULT_BACKEND: amqp
+                CELERY_TASK_SERIALIZER: json
+            # Setting EKOPOST_DEBUG_PDF to a path means that the other EKOPOST settings will be ignored
+            # and that the pdf only will be written to to the supplied path, not sent to the letter service.
+            EKOPOST_DEBUG_PDF: /opt/eduid/eduid-letter-proofing/run/
+            EKOPOST_API_URI: https://api.ekopost.se
+            EKOPOST_API_VERIFY_SSL: yes
+            EKOPOST_API_USER: ekopost_user
+            EKOPOST_API_PW: ekopost_pw
         oidc_proofing:
             SECRET_KEY: supersecretkey
             LOG_FILE: /var/log/eduid/oidc_proofing.log
@@ -28,13 +51,6 @@ eduid:
             PROVIDER_CONFIGURATION_INFO:
                 issuer: http://localhost:5000
             MONGO_URI: mongodb://eduid_oidc_proofing:eduid_oidc_proofing_pw@mongodb.eduid_dev
-        authn:
-            SERVER_NAME: authn.eduid.docker:8080
-            SECRET_KEY: supersecretkey
-            MONGO_URI: mongodb://eduid_authn:eduid_authn_pw@mongodb.eduid_dev
-            TESTING: no
-            LOG_FILE: /opt/eduid/log/authn.log
-            LOG_LEVEL: DEBUG
         support:
             SECRET_KEY: supersecretkey
             LOG_FILE: /var/log/eduid/support.log
