--- a/react/personal_data/package.json
+++ b/react/personal_data/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "react-webpack-template",
-  "version": "0.0.0",
+  "name": "personal_data",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack --progress --colors --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Enrique Pérez Arnaud",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "react": "^0.14.5",
-    "react-dom": "^0.14.5"
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.3.26",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "webpack": "^1.12.9"
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "webpack": "^1.13.1"
   }
 }
