--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,21 @@
-env
 *.log
+.coverage
+.tox
+__pycache__
+*.egg
+*.egg-info
+*.pyc
+*.pyo
+.*.swp
+.*.swo
+*~
+*#
+build/
+dist/
+sessions/
+venv/
+env/
+nosetests.xml
+coverage.xml
+.idea/
+
