sendmail task, untested

--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -10,3 +10,13 @@ template_dir =
 # transmitted to the end service for SMS or MM
 devel_mode = true
 audit = true
+
+# Mail settings
+MAIL_HOST = localhost
+MAIL_PORT = 25
+MAIL_DEFAULT_SENDER = info@sunet.se
+MAIL_STARTTLS = false
+MAIL_CERTFILE =
+MAIL_KEYFILE =
+MAIL_USERNAME =
+MAIL_PASSWORD =
