--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ services:
 # command to install dependencies
 install:
   - pip install -U setuptools
-  - pip install -r requirements/testing.txt
+  - pip install --index-url https://pypi.sunet.se -r requirements/testing.txt
 # command to run tests
 script:
   - nosetests
