--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,4 @@ cover-erase = 1
 [aliases]
 testing = develop easy_install eduid_common[testing]
 webapp = develop easy_install eduid_common[webapp]
+nodeps = develop easy_install eduid_common[nodeps]
