Added pull of mongodb image

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
 before_install:
   - docker pull docker.sunet.se/eduid/redis:latest
+  - docker pull docker.sunet.se/eduid/mongodb:latest
   - docker pull docker.sunet.se/library/etcd:v2.2.5
 # Have Travis CI start mongodb and redis for us
 services:
