--- a/requirements-testing.txt
+++ b/requirements-testing.txt
@@ -5,8 +5,8 @@ pysaml2>=4.0.3rc1
 vccs_client>=0.4.2
 Flask>=0.10.1,<0.12
 PyYAML>=3.11
-bleach==1.4.2
-html5lib==0.9999999
+bleach>=2.0.0
+eduid-am>=0.6.2b2
 mock==1.0.1
 nose==1.3.7
 nosexcover==1.0.11
