Added pip freeze to help with debugging

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ install:
   - pip install --index-url https://pypi.sunet.se -r requirements/testing.txt
 # command to run tests
 script:
+  - pip freeze
   - nosetests
