--- a/snyk-test-requirements/requirements.txt
+++ b/snyk-test-requirements/requirements.txt
@@ -1,8 +1,9 @@
+--index-url https://pypi.sunet.se/simple/
 blinker
 coverage==3.6
 cryptography>=2.0.3
 eduid-am>=0.6.2b2
-eduid-common[webapp]>=0.3.2b16
+eduid-common>=0.3.2b16
 eduid_lookup_mobile>=0.0.6b3
 eduid-msg>=0.10.3b0
 eduid-userdb>=0.4.0b2
@@ -10,7 +11,7 @@ Flask>=0.12,<0.13
 flask-babel>=0.11.1
 gunicorn
 hammock>=0.2.4
-jose>=0.3.0-r common.txt
+jose>=0.3.0
 marshmallow>=2.10,<2.11
 mock==1.0.1
 nose==1.2.1
