--- a/snyk-test-requirements/requirements.txt
+++ b/snyk-test-requirements/requirements.txt
@@ -1,2 +1,31 @@
 --index-url https://pypi.sunet.se/simple/
--r ../requirements/prod.txt
+blinker
+coverage==3.6
+cryptography>=2.0.3
+eduid-am>=0.6.2b2
+eduid-common>=0.3.2b16
+eduid_lookup_mobile>=0.0.6b3
+eduid-msg>=0.10.3b0
+eduid-userdb>=0.4.0b2
+Flask>=0.12,<0.13
+flask-babel>=0.11.1
+gunicorn
+hammock>=0.2.4
+jose>=0.3.0
+marshmallow>=2.10,<2.11
+mock==1.0.1
+nose==1.2.1
+nosexcover==1.0.8
+oic==0.8.3
+Pillow>=3.0.0
+pynacl>=1.0.1
+pyOpenSSL>=17.3.0
+pysaml2==4.4.0
+python-etcd>=0.4.3
+python-u2flib-server>=5.0.0
+qrcode>=5.1
+raven
+redis>=2.10.5
+urllib3>=1.21.1
+WebTest==2.0.18
+xhtml2pdf>=0.2b1
