--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
   - "3.6"
 before_install:
+  - docker pull docker.sunet.se/eduid/rabbitmq:latest
   - docker pull docker.sunet.se/eduid/redis:latest
   - docker pull docker.sunet.se/eduid/mongodb:latest
 # Have Travis CI start mongodb and redis for us
