--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ services:
 # command to install dependencies
 install:
   - pip install -U setuptools
-  - pip install --index-url https://pypi.sunet.se -r requirements/testing.txt
+  - pip install --index-url https://pypi.sunet.se --extra-index-url https://pypi.python.org -r requirements/testing.txt
 # command to run tests
 script:
   - pip freeze
