--- a/snyk-test-requirements/requirements.txt
+++ b/snyk-test-requirements/requirements.txt
@@ -11,7 +11,7 @@ Flask>=0.12,<0.13
 flask-babel>=0.11.1
 gunicorn
 hammock>=0.2.4
-jose>=0.3.0
+python-jose>=3.0.1
 marshmallow>=2.10,<2.11
 mock==1.0.1
 nose==1.2.1
