--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -8,19 +8,6 @@ triggers:
 slack:
   room: "eduid-builds"
 python_module: eduid_webapp
+publish_over_ssh:
+  - pypi.sunet.se
 clean_workspace: true
-
-extra_jobs:
-  - name: eduid-webapp-docker
-    builders:
-      - docker
-    docker_name: eduid/eduid-webapp
-    managed_scripts:
-      - docker_build_prep.sh
-      - docker_tag.sh
-    triggers:
-      github_push: false
-      cron: null
-    upstream:
-      - eduid-docker-pythonenv
-      - eduid-webapp
