--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,3 @@
-include *.rst *.cfg *.txt *.ini
+include *.txt *.ini *.cfg *.rst *.md
+recursive-include eduid_webapp *.jinja2 *.xml *.txt *.pt *.html
+recursive-include eduid_webapp *.pot *.po *.mo
