--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include *.txt *.ini *.cfg *.rst *.md
-recursive-include eduid_webapp *.jinja2 *.xml *.txt *.pt *.html
-recursive-include eduid_webapp *.pot *.po *.mo
+recursive-include src/eduid_webapp *.jinja2 *.xml *.txt *.pt *.html
+recursive-include src/eduid_webapp *.pot *.po *.mo
