--- a/snyk-test-requirements/requirements.txt
+++ b/snyk-test-requirements/requirements.txt
@@ -12,7 +12,7 @@ flask-babel>=0.11.1
 gunicorn
 hammock>=0.2.4
 python-jose>=3.0.1
-marshmallow==2.15.1
+marshmallow>=2.15.1,==2.*
 mock==1.0.1
 nose==1.2.1
 nosexcover==1.0.8
