--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -1,5 +1,5 @@
 builders:
-  - python
+  - script
 upstream:
   - eduid-userdb
   - eduid-common
@@ -7,7 +7,13 @@ triggers:
   cron: "@weekly"
 slack:
   room: "eduid-builds"
-python_module: eduid_webapp
+script:
+  - "virtualenv venv"
+  - ". venv/bin/activate"
+  - "pip install -U setuptools"
+  - "pip install --index-url https://pypi.sunet.se -r requirements/testing.txt"
+  - "nosetests"
+  - "python setup.py sdist bdist_wheel --universal"
 publish_over_ssh:
   - pypi.sunet.se
 clean_workspace: true
