--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-nose
+eduid_userdb>=0.4.1b0
+eduid_common>=0.1.3b5
+python-dateutil>=2.1
+celery[redis]==4.2.*
+simplejson>=3.6.5
+kombu==4.2.*
+billiard==3.5.*
