--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -27,7 +27,7 @@ extra_jobs:
       github_push: false
       cron: null
     upstream:
-      - eduid-docker-pythonenv
+      - eduid-docker-python3env
       - eduid-am
 
 script:
