--- a/setup.cfg
+++ b/setup.cfg
@@ -10,5 +10,8 @@ with-xcoverage = 1
 with-xunit = 1
 cover-erase = 1
 
+[pylama:pycodestyle]
+max_line_length = 120
+
 [aliases]
 testing = develop easy_install eduid_am[testing]
