--- a/setup.cfg
+++ b/setup.cfg
@@ -9,5 +9,8 @@ cover-package = eduid_lookup_mobile
 with-xcoverage = 1
 cover-erase = 1
 
+[pylama:pycodestyle]
+max_line_length = 120
+
 [aliases]
 testing = develop easy_install eduid_lookup_mobile[testing]
