--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ python:
   - "2.7"
   - "3.6"
 before_install:
-  - docker pull docker.sunet.se/eduid/rabbitmq:latest
   - docker pull docker.sunet.se/eduid/redis:latest
   - docker pull docker.sunet.se/eduid/mongodb:latest
 # Have Travis CI start mongodb and redis for us
@@ -13,7 +12,7 @@ services:
 # command to install dependencies
 install:
   - pip install -U setuptools
-  - python setup.py install easy_install[testing]
+  - python setup.py testing
 # command to run tests
 script:
   - nosetests
