--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 eduid_userdb>=0.4.1b0
-eduid_common>=0.3.6
+eduid_common[worker]>=0.3.8b0
 python-dateutil>=2.1
 celery[redis]==4.2.*
-simplejson>=3.6.5
-kombu==4.2.*
-billiard==3.5.*
-python-etcd>=0.4.5
-PyYAML >= 3.11
+
