--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 six >= 1.11.0
-eduid-userdb >= 0.4.4
-eduid_common>=0.3.6
+eduid-userdb >= 0.4.6b0
+eduid_common[worker]>=0.3.8b1
 celery[redis]==4.2.*
 suds-jurko >= 0.6
 phonenumbers >= 8.9.3
