--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ python:
   - "2.7"
   - "3.6"
 before_install:
-  - docker pull docker.sunet.se/eduid/redis:latest
-  - docker pull docker.sunet.se/library/etcd:v2.2.5
+#  - docker pull docker.sunet.se/eduid/redis:latest
+#  - docker pull docker.sunet.se/library/etcd:v2.2.5
   - docker pull docker.sunet.se/eduid/mongodb:latest
 services:
   - docker
