--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -26,7 +26,7 @@ extra_jobs:
       cron: null
     upstream:
       - eduid-docker-python3env
-      - eduid-msg
+      - eduid_msg
 
 script:
   - "virtualenv -p python3 venv"
