--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -5,7 +5,7 @@ upstream:
 slack:
   room: eduid-builds
 script:
-  - "virtualenv venv"
+  - "python3.7 -m venv venv"
   - ". venv/bin/activate"
   - "pip install -U setuptools"
   - "pip install --index-url https://pypi.sunet.se -r test_requirements.txt"
