--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -7,7 +7,7 @@ slack:
 script:
   - "python3.7 -m venv venv"
   - ". venv/bin/activate"
-  - "pip install -U setuptools"
+  - "pip install -U setuptools wheel"
   - "pip install --index-url https://pypi.sunet.se -r test_requirements.txt"
   - "nosetests"
   - "python setup.py sdist bdist_wheel --universal"
