--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -12,12 +12,13 @@ pre_build_script:
   - "docker pull docker.sunet.se/library/etcd:v2.2.5"
   - "docker pull docker.sunet.se/eduid/mongodb:latest"
 script:
-  - "virtualenv venv"
+  - "python3.7 -m venv venv"
   - ". venv/bin/activate"
-  - "pip install -U setuptools"
+  - "pip install -U setuptools wheel mypy"
   - "pip install --index-url https://pypi.sunet.se -r requirements/testing.txt"
   - "pip freeze"
   - "nosetests"
+  - "mypy --ignore-missing-imports src/eduid_webapp"
   - "python setup.py sdist bdist_wheel --universal"
 publish_over_ssh:
   - pypi.sunet.se
