--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-sudo: required
 language: python
+distro: xenial
 python:
-  - "2.7"
-  - "3.6"
+  - "3.7"
 before_install:
   - docker pull docker.sunet.se/eduid/mongodb:latest
 # Have Travis CI start mongodb for us
