--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 sudo: required
+dist: xenial
 language: python
 python:
-  - "2.7"
-  - "3.5"
+  - "3.7"
 services:
   - docker
 before_install:
   - docker pull docker.sunet.se/eduid/mongodb:latest
 # command to install dependencies
 install:
-  - pip install -U setuptools
-  - python setup.py develop
-  - pip install nosexcover WebTest==2.0.18
+  - pip install -U setuptools wheel mypy
+  - pip install --index-url https://pypi.sunet.se -r test_requirements.txt
 # command to run tests
 script:
+  - pip freeze
   - nosetests
