--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+dist: xenial
 language: python
 python:
   - "3.7"
@@ -10,8 +11,10 @@ services:
   - docker
 # command to install dependencies
 install:
-  - pip install -U setuptools
+  - pip install -U setuptools mypy
   - python setup.py testing
 # command to run tests
 script:
+  - pip freeze
   - nosetests
+  - mypy --ignore-missing-imports eduid_am
