--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
 language: python
 python:
   - "3.7"
+codecov: true
 before_install:
   - docker pull docker.sunet.se/eduid/redis:latest
   - docker pull docker.sunet.se/library/etcd:v2.2.5
@@ -20,5 +21,5 @@ install:
 # command to run tests
 script:
   - pip freeze
-  - nosetests
+  - nosetests --with-xcoverage
   - mypy --ignore-missing-imports src/eduid_webapp
