--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ addons:
 language: python
 python:
   - "3.7"
-codecov: true
 before_install:
   - docker pull docker.sunet.se/eduid/redis:latest
   - docker pull docker.sunet.se/library/etcd:v2.2.5
@@ -16,10 +15,13 @@ services:
   - docker
 # command to install dependencies
 install:
-  - pip install -U setuptools mypy
+  - pip install -U setuptools mypy codecov
   - pip install --index-url https://pypi.sunet.se -r requirements/testing.txt
 # command to run tests
 script:
   - pip freeze
   - nosetests --with-xcoverage
   - mypy --ignore-missing-imports src/eduid_webapp
+after_success:
+  - codecov
+
