--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-six>=1.11.0
 eduid_am>=0.7.0
 eduid_userdb>=0.4.1b0
 eduid_common>=0.3.6
 python-dateutil>=2.1
+kombu[redis]>=4.6.4
 celery[redis]==4.3.*
 pysmscom>=0.4
 Jinja2>=2.7.3
