Add eduid-common as upstream, remove deprecated upstreams

--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -2,10 +2,7 @@ builders:
   - script
 upstream:
   - eduid-userdb
-  - eduid-dashboard-amp
-  - eduid-signup-amp
-  - eduid-api-amp
-  - eduid-proofing-amp
+  - eduid-common
 triggers:
   cron: "@weekly"
 slack:
