--- a/setup.cfg
+++ b/setup.cfg
@@ -12,4 +12,5 @@ cover-erase = 1
 [aliases]
 testing = develop easy_install eduid_common[testing]
 webapp = develop easy_install eduid_common[webapp]
+worker = develop easy_install eduid_common[worker]
 nodeps = develop easy_install eduid_common[nodeps]
