Remove mentions of nosetest

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist=py27,py36
+envlist=py37
 indexserver =
   default = https://pypi.sunet.se/simple/
 
 [testenv]
 deps=-rrequirements/testing.txt
-commands=nosetests -s
+commands=pytest
 
 [pep8]
 max-line-length=100
