--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -9,7 +9,7 @@ script:
   - ". venv/bin/activate"
   - "pip install -U setuptools wheel mypy"
   - "pip install --index-url https://pypi.sunet.se -r test_requirements.txt"
-  - "nosetests"
+  - "pytest"
   - "mypy --ignore-missing-imports src/eduid_common"
   - "python setup.py sdist bdist_wheel --universal"
 clean_workspace: true
