--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ install:
   - python setup.py install
 # command to run tests
 script:
-  - nosetests
+  - pytest
   - mypy --ignore-missing-imports src/eduid_common
