--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -10,8 +10,8 @@ script:
   - "pip install -U setuptools wheel mypy"
   - "pip install --index-url https://pypi.sunet.se -r test_requirements.txt"
   - "pip freeze"
-  - "nosetests"
-# - "mypy --ignore-missing-imports src/eduid_userdb"
+  - "pytest"
+  - "mypy --ignore-missing-imports src/eduid_userdb"
   - "python setup.py sdist bdist_wheel --universal"
 publish_over_ssh:
   - pypi.sunet.se
