--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ install:
 # command to run tests
 script:
   - pip freeze
-  - nosetests
+  - pytest
+  - mypy --ignore-missing-imports src/eduid_userdb
