--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -12,8 +12,8 @@ script:
   - "pip install -U setuptools wheel mypy"
   - "pip install --index-url https://pypi.sunet.se -r test_requirements.txt"
   - "pip freeze"
-  - "nosetests"
- #- "mypy --ignore-missing-imports eduid_lookup_mobile"
+  - "pytespytest"
+  - "mypy --ignore-missing-imports eduid_lookup_mobile"
   - "python setup.py sdist bdist_wheel --universal"
 publish_over_ssh:
   - pypi.sunet.se
