--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ eduid_userdb>=0.4.1b0
 eduid_common[worker]>=0.4.1b24
 python-dateutil>=2.1
 vine<5.0.0a1  # Version mismatch problem
+kombu==4.5.*  # Stable release until celery[redis]==4.4.*
 celery[redis]==4.3.*
 pysmscom>=0.4
 Jinja2>=2.7.3
