--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ eduid_common[worker]>=0.4.1b25
 eduid_userdb>=0.4.6b15
 python-dateutil>=2.1
 vine<5.0.0a1  # Version mismatch problem
+kombu==4.5.0  # Stable release until celery[redis]==4.4.*
 celery[redis]==4.3.*
 
