--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 six >= 1.11.0
 eduid-userdb >= 0.4.6b0
 eduid_common[worker]>=0.4.1b24
-celery[redis]==4.3.*
 suds-jurko >= 0.6
 phonenumbers >= 8.9.3
 vine<5.0.0a1,>=1.1.3
+kombu==4.5.0  # Stable release until celery[redis]==4.4.*
+celery[redis]==4.3.*
