--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -17,7 +17,7 @@ script:
   - ". venv/bin/activate"
   - "pip install --upgrade setuptools pip wheel mypy"
   - "pip install --index-url https://pypi.sunet.se -r test_requirements.txt"
-  - "pytest"
+  - "pytest src/eduid_scimapi"
   - "mypy --ignore-missing-imports src/eduid_scimapi"
   - "python setup.py sdist bdist_wheel --universal"
 
