black is the new black

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,7 @@
 [mypy]
 plugins = marshmallow_dataclass.mypy
+
+[isort]
+known_eduid = eduid_common,eduid_userdb
+known_thirdparty = marshmallow_enum
+sections = FUTURE,STDLIB,THIRDPARTY,EDUID,FIRSTPARTY
