--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,7 @@ index_url = https://pypi.sunet.se/simple/
 
 [aliases]
 testing = develop easy_install eduid_webapp[testing]
+
+[isort]
+known_eduid = eduid_userdb,eduid_common,eduid_am,eduid_msg
+sections = FUTURE,STDLIB,THIRDPARTY,EDUID,FIRSTPARTY
