configure black reformatting

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,7 @@ index_url = https://pypi.sunet.se/simple/
 
 [aliases]
 testing = develop easy_install eduid_msg[testing]
+
+[isort]
+known_eduid = eduid_userdb,eduid_common
+sections = FUTURE,STDLIB,THIRDPARTY,EDUID,FIRSTPARTY
