configure reformatting with black

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,12 @@
 [easy_install]
 index_url = https://pypi.sunet.se/simple/
 
-[nosetests]
-match = ^test
-where = eduid_lookup_mobile
-nocapture = 1
-cover-package = eduid_lookup_mobile
-with-xcoverage = 1
-cover-erase = 1
-
 [pylama:pycodestyle]
 max_line_length = 120
 
 [aliases]
 testing = develop easy_install eduid_lookup_mobile[testing]
+
+[isort]
+known_eduid = eduid_userdb,eduid_common
+sections = FUTURE,STDLIB,THIRDPARTY,EDUID,FIRSTPARTY
