--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,7 @@ max_line_length = 120
 
 [aliases]
 testing = develop easy_install eduid_am[testing]
+
+[isort]
+known_eduid = eduid_userdb,eduid_common
+sections = FUTURE,STDLIB,THIRDPARTY,EDUID,FIRSTPARTY
