--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ install:
 # command to run tests
 script:
   - pip freeze
-  - pytest
-  - mypy --ignore-missing-imports src/eduid_scimapi
+  - make test
+  - make typecheck
