--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ install:
 # command to run tests
 script:
   - pip freeze
-  - pytest
-  - mypy --ignore-missing-imports src/eduid_groupdb
+  - make test
+  - make typecheck
