--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,5 @@
 index_url = https://pypi.sunet.se/simple/
 
 [isort]
-sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY
+known_eduid = eduid_common,eduid_userdb,eduid_groupdb
+sections = FUTURE,STDLIB,THIRDPARTY,EDUID,FIRSTPARTY
